Button fixes Collection grid spacing fixes

--- a/assets/base.css
+++ b/assets/base.css
@@ -1507,6 +1507,7 @@ button.shopify-payment-button__button--unbranded {
 
 .gradient-button {
   --border-offset: none !important;
+  box-shadow: none !important;
   font-family: var(--buttons-gradient-font);
   font-size: 1.9rem;
   color: white !important;
@@ -1522,6 +1523,11 @@ button.shopify-payment-button__button--unbranded {
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
   transition: box-shadow 0.25s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.gradient-button::after {
+  border-radius: none !important;
+  box-shadow: none !important;
 }
 
 .regular-button {
