--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -7,13 +7,6 @@
   overflow: hidden;
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.075);
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.075);
-  transform: scale(1);
-  transition: transform 0.2s ease-in-out;
-}
-
-.card-wrapper:hover {
-  transform: scale(1.025);
-  transition: transform 0.2s ease-in-out;
 }
 
 .card {
