--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -44,7 +44,7 @@
   }
 }
 
-.collection__description > * {
+.collection__description>* {
   margin: 0;
 }
 
@@ -76,5 +76,5 @@
 }
 
 .collection__view-all a:not(.link) {
-  margin-top: 1rem;
+  margin-top: 3rem;
 }
